fix the alignment of the whole desktop version

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -65,6 +65,7 @@ a {
   background-size: 100% 100%;
   height: 40rem;
   position: relative;
+  bottom: 1rem;
  }
 
  .sylish-right-text {
@@ -492,6 +493,14 @@ a {
   align-self: center;
 }
 
+.readmore-button-next{
+  background: #C1F7D5 0% 0% no-repeat padding-box;
+  border-radius: 100px;
+  font: Bold 18px/22px Helvetica;
+  width: 156px;
+  height: 47px;
+  align-self: center;
+}
 
 .blue-event-section {
   background: #354463 0% 0% no-repeat padding-box;
@@ -653,7 +662,7 @@ a {
   width: auto;
   height: 216px;
   position: relative;
-  top: 15rem;
+  top: -28rem;
   background: #C1F7D5 0% 0% no-repeat padding-box;
   display: flex;
   flex-direction: column;
@@ -691,6 +700,7 @@ a {
   border-radius: 100px;
   font: lighter 16px/20px Helvetica;
   text-align: center;
+  border: 0px;
 }
 
 
@@ -709,8 +719,7 @@ a {
   align-items: center;
   justify-items: center;
   position: relative;
-  grid: 2rem;
-  top: 16rem;
+  top: -20rem;
 }
 
 .footer-title-text {
@@ -1042,7 +1051,7 @@ top: 2rem;
 .tree-planting-section {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
   align-content: space-between;
   padding-left: 15rem;
 }
@@ -1131,6 +1140,7 @@ top: 2rem;
   text-align: left;
   font: normal 14px/17px Helvetica;
   letter-spacing: 0.56px;
+  position: relative;
 }
 
 .stylist-text-footer {
@@ -1174,7 +1184,7 @@ top: 2rem;
 
   .donate-button {
     border-radius: 100px;
-    top: -7rem;
+    top: -8rem;
     width: 160px;
     height: 48px;
     position: relative;
@@ -1191,7 +1201,9 @@ top: 2rem;
 
    div.background-image {
     background: transparent url('/img/annie-spratt-135307-unsplash-home.png') 0% 0% no-repeat padding-box;
-   }
+    position: relative;
+    bottom: 8rem;
+  }
 
    .sylish-right-text {
       position: relative;
@@ -1282,6 +1294,7 @@ top: 2rem;
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  top: 7.9rem;
 }
 
 .button-what-we-do {
@@ -1306,6 +1319,8 @@ top: 2rem;
   padding-right: 20pc;
   grid-template-rows: 1.8fr 1fr 1fr 1fr 1fr .1fr;
   grid-gap: 2.5rem;
+  position: relative;
+  top: -14rem;
 }
 
 .climate-change-text {
@@ -1334,7 +1349,7 @@ top: 2rem;
 
 .image-white-section {
   position: relative;
-  top: 17rem;
+  top: -12rem;
   width: 500px;
   height: 1000px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
@@ -1348,19 +1363,17 @@ top: 2rem;
 }
 
 .lady-baby {
-
   margin-left: 110%;
   width: 576px;
   height: 568px;
-  margin-top: 28%;
 
 }
 
 .blue-button-stories {
   width: 160px;
   height: 40px;
-  top: 12.5rem;
-  left: 42rem;
+  top: 4.5rem;
+  left: 43rem;
 }
 
 
@@ -1369,9 +1382,17 @@ top: 2rem;
   height: 22%;
   position: absolute;
   left: 16rem;
-  top: 20rem;
+  top: 14rem;
+  text-align: left;
   
 }
+
+.about-farmer-main-text {
+  position: relative;
+  left: 2rem;
+  width: 83%;
+}
+
 
 .about-farmer-text {
   text-align: center;
@@ -1379,10 +1400,15 @@ top: 2rem;
   letter-spacing: 0.44px;
 }
 
-.readmore-button {
+.readmore-button {  
+    position: relative;
+    bottom: 24rem;
+    left: 10rem;
+}
+
+.readmore-button-next {
   position: relative;
-  bottom: 18rem;
-  left: 5rem;
+  bottom: 15rem;
 }
 
 
@@ -1446,8 +1472,8 @@ top: 2rem;
 
 
 .readmore-button-left{
-  left: 21rem;
-  bottom: 21rem;
+  left: 24rem;
+  bottom: 19rem;
 }
 
 .subscribe-text {
@@ -1462,6 +1488,7 @@ top: 2rem;
   width: 400px;
   position: relative;
   left: 13rem;
+  border: 0px;
 }
 
 .footer-section {
@@ -1480,6 +1507,10 @@ top: 2rem;
 .stylist-text-footer {
   left: 2rem;
   bottom: 1rem;
+}
+
+.blue-event-section {
+  top: -28rem;
 }
 
 
